replaced use of .collect() with .toList()